Archive2/3c/8c6c158b629ffc/output
main.cpp: In function 'int main()':
main.cpp:49:29: error: 'stol565bci' was not declared in this scope
         for (int j = 0; j < stol565bci; j++) {
                             ^
